add header that shows last animal picked, further styling

--- a/index.html
+++ b/index.html
@@ -14,28 +14,33 @@
 
 <body>
     <header>
-        <div class="gutter-right logo">
-            <img src="assets/big-logo.png" />
-        </div>
+        <div id="last-picked">Who will be picked next?</div>
     </header>
     <main>
         <section class="main-section">
             <img class="main-logo" src="./assets/alchemy-logo.png" />
+
             <h2>
-                Welcome to Alchemy Bootstrap!
+                Welcome to The Animal Farm!
             </h2>
             <div class="animal-container">
-                <img id="dog-pic" src="./assets/dog.jpeg" alt="dog illustration">
-                <audio id="bark"
-                    src="./assets/03-putting-it-all-together-js-and-the-dom_lab-assets_sounds_dog.wav"></audio>
+                <div id="dog-pic">
+                    <img src="./assets/dog.jpeg" alt="dog illustration">
+                    <audio id="bark"
+                        src="./assets/03-putting-it-all-together-js-and-the-dom_lab-assets_sounds_dog.wav"></audio>
+                </div>
 
-                <img id="cat-pic" src="./assets/cat.jpeg" alt="cat illustration">
-                <audio id="meow"
-                    src="./assets/03-putting-it-all-together-js-and-the-dom_lab-assets_sounds_cat.wav"></audio>
+                <div id="cat-pic">
+                    <img id="cat-pic" src="./assets/cat.jpeg" alt="cat illustration">
+                    <audio id="meow"
+                        src="./assets/03-putting-it-all-together-js-and-the-dom_lab-assets_sounds_cat.wav"></audio>
+                </div>
 
-                <img id="horse-pic" src="./assets/horse.jpeg" alt="horse illustration">
-                <audio id="neigh"
-                    src="./assets/03-putting-it-all-together-js-and-the-dom_lab-assets_sounds_horse.wav"></audio>
+                <div id="horse-pic">
+                    <img src="./assets/horse.jpeg" alt="horse illustration">
+                    <audio id="neigh"
+                        src="./assets/03-putting-it-all-together-js-and-the-dom_lab-assets_sounds_horse.wav"></audio>
+                </div>
             </div>
         </section>
     </main>
