added hover border effect around animals

--- a/index.html
+++ b/index.html
@@ -24,23 +24,23 @@
                 Welcome to The Animal Farm!
             </h2>
             <div class="animal-container">
-                <div id="dog-pic">
-                    <img src="./assets/dog.jpeg" alt="dog illustration">
-                    <audio id="bark"
-                        src="./assets/03-putting-it-all-together-js-and-the-dom_lab-assets_sounds_dog.wav"></audio>
-                </div>
+                <!-- <div id="dog-pic"> -->
+                <img id="dog-pic" src="./assets/dog.jpeg" alt="dog illustration">
+                <audio id="bark"
+                    src="./assets/03-putting-it-all-together-js-and-the-dom_lab-assets_sounds_dog.wav"></audio>
+                <!-- </div> -->
 
-                <div id="cat-pic">
-                    <img id="cat-pic" src="./assets/cat.jpeg" alt="cat illustration">
-                    <audio id="meow"
-                        src="./assets/03-putting-it-all-together-js-and-the-dom_lab-assets_sounds_cat.wav"></audio>
-                </div>
+                <!-- <div id="cat-pic"> -->
+                <img id="cat-pic" src="./assets/cat.jpeg" alt="cat illustration">
+                <audio id="meow"
+                    src="./assets/03-putting-it-all-together-js-and-the-dom_lab-assets_sounds_cat.wav"></audio>
+                <!-- </div> -->
 
-                <div id="horse-pic">
-                    <img src="./assets/horse.jpeg" alt="horse illustration">
-                    <audio id="neigh"
-                        src="./assets/03-putting-it-all-together-js-and-the-dom_lab-assets_sounds_horse.wav"></audio>
-                </div>
+                <!-- <div id="horse-pic"> -->
+                <img id="horse-pic" src="./assets/horse.jpeg" alt="horse illustration">
+                <audio id="neigh"
+                    src="./assets/03-putting-it-all-together-js-and-the-dom_lab-assets_sounds_horse.wav"></audio>
+                <!-- </div> -->
             </div>
         </section>
     </main>
